# xenith-landing-page

./: .env.example  .gitignore  CLAUDE.md  README.md  auth.ts  docker-compose.yml  next.config.ts  package-lock.json  package.json  proxy.ts
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ad775a82a2f_init.py  5a0f6deccbad_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/composition/: access_control.py  audit_read.py  auth.py  bootstrap.py  categories.py  clients.py  comunicados.py  concepts.py  inventory.py  item_groups.py  products.py  profile.py  projects.py  quotations.py  rfid.py  suppliers.py  tasks.py  uploads.py  users.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  catalog_inventory.py  project_client.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  category.py  client.py  common.py  comunicado.py  concept.py  contact.py  inventory.py  item_group.py  product.py  project.py  quotation.py  rfid.py  supplier.py  task.py  user.py
backend/docs/: BACKEND_EXPLICADO.md
backend/scripts/: check_hexagonal.py
backend/tests/application/: test_access_control_use_cases.py  test_audit_use_cases.py  test_auth_use_cases.py  test_bootstrap_use_cases.py  test_categories_use_cases.py  test_clients_use_cases.py  test_concepts_use_cases.py  test_inventory_use_cases.py  test_item_groups_use_cases.py  test_products_use_cases.py  test_profile_use_cases.py  (+6 more)
(+315 files in other folders)
