[project]
name = "xenith-backend"
version = "0.1.0"
description = "FastAPI backend for Xenith"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.14.0,<2.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt==4.0.1",
  "python-multipart>=0.0.12,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "boto3>=1.37.0,<2.0.0",
  "reportlab>=4.4.0,<5.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0"
]
